--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,16 @@
     <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
-    <div id="app"></div>
-
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
+          <h1>Quick React Quiz</h1>
+          <p class="lead">A Simple Quiz App created and powered by React.js
+          </p><hr />
+          <div id="app"></div>
+        </div>
+      </div>
+    </div>
     <script src="js/main.js"></script>
   </body>
 </html>
