--- a/app/index.html
+++ b/app/index.html
@@ -11,8 +11,8 @@
       <div class="row">
         <div class="col-md-12">
           <h1>Quick React Quiz</h1>
-          <p class="lead">A Simple Quiz App created and powered by React.js
-          </p><hr />
+            <p class="lead">A Simple Quiz App created and powered by React.js</p>
+          <hr />
           <div id="app"></div>
         </div>
       </div>
